--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
   <title>BlogSite</title>
 </head>
 
-<body>
+<body style="background-color: #ededed;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
